# OpenFactory

./: .dockerignore  .flake8  .gitignore  .pydocstyle  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  generate_ofa_completion.py  init_infrastructure.py  init_traefik.sh  ofa.py  pyproject.toml  requirements.txt  rq_worker.py  setup.py  traefik.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: check-openfactory-config-file.yml  check-openfactory-version.yml  influxdb_connector.yml  kafka_mtc_producer.yml  lint.yml  mocked_temp_sensor_shdr.yml  mtc_agent.yml  opcua_supervisor.yml  pr-checks.yml  unittests.yml
AKHQ/: README.md  docker-compose.yml
InfluxDB/: README.md
InfluxDB/connector/: Dockerfile  README.md  (+2 more)
Kafka-Cluster/: README.md  docker-compose-kraft.yml  docker-compose-ksqldb-cli.yml  docker-compose.yml  jmx_exporter_config.yml
MTC2Kafka/: kafka_producer.py
MTConnect/: README.md
Monitoring/: README.md  docker-compose.yml
config/: config.py  openfactory.yml  openfactory_infra.yml
docs/: MANIFESTO.md  README.txt  about.rst  conf.py  index.rst  ofa_env_var.md  ofa_features.rst  ofa_manager_node_setup.md  ofa_node_Setup.md  requirements.txt  setup_node.md
docs_md/: README.md  ofa_env_var.md
openfactory/: __init__.py  exceptions.py  ofacli.py  openfactory.py  openfactory_cluster.py  openfactory_deploy_strategy.py  openfactory_manager.py  setup_logging.py
tests/: README.md  run_integration_tests.py  run_integration_tests.sh  run_unit_tests.py  test_rq_worker.py
(+480 files in other folders)
