[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfactory"
version = "0.1.0"
dependencies = [
    "paramiko",
    "docker",
    "pyyaml",
    "click",
    "sqlalchemy",
    "flake8",
    "python-dotenv",
    "PyGithub",
    "fsspec",
    "influxdb-client",
    "asyncua",
    "confluent-kafka",
    "flask",
    "flask-sqlalchemy",
    "flask-admin",
    "flask-login",
    "flask-wtf",
    "WTForms-SQLAlchemy",
    "python-on-whales",
    "rq",
    "PyKSQL @ git+https://github.com/rwuthric/PyKSQL.git",
    "mtc2kafka @ git+https://github.com/rwuthric/python-mtc2kafka.git"
]

[tool.setuptools]
include-package-data = true 

[tool.setuptools.packages]
find = { where = ["."], include = ["openfactory", "openfactory.*"] }

[project.scripts]
ofa = "openfactory.ofacli:cli"
